objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>BenchmarkIncomeCapLevel__c</fullName>
        <description>The income level to use as a benchmark for the wage cap.</description>
        <inlineHelpText>The income level to use as a benchmark for the wage cap.</inlineHelpText>
        <label>Benchmark Income Cap Level</label>
        <picklist>
            <picklistValues>
                <fullName>High Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Moderate Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Moderate Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Low Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average Wages</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CapWagePeriod__c</fullName>
        <description>The period defining the wage cap amount.</description>
        <inlineHelpText>The period defining the wage cap amount.</inlineHelpText>
        <label>Cap Wage Period</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CarryBackYearCount__c</fullName>
        <description>Taxpayer can amend prior-year returns using current credits.</description>
        <inlineHelpText>Taxpayer can amend prior-year returns using current credits.</inlineHelpText>
        <label>Carry-Back Years</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CarryForwardYearCount__c</fullName>
        <description>Taxpayer can use current credits for this number of future tax years.</description>
        <inlineHelpText>Taxpayer can use current credits for this number of future tax years.</inlineHelpText>
        <label>Carry-Forward Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditLifetimeYearCount__c</fullName>
        <description>The maximum length of time in years that an employee can generate tax credits from this program during the employee&apos;s employment period with a company.</description>
        <inlineHelpText>The maximum length of time in years that an employee can generate tax credits from this program during the employee&apos;s employment period with a company.</inlineHelpText>
        <label>Credit Lifetime in Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DescriptionText__c</fullName>
        <description>A full description of the how the program works.</description>
        <inlineHelpText>A full description of the how the program works.</inlineHelpText>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MaximumLifetimeBenefitAmount__c</fullName>
        <description>The maximum amount an employee can be worth in tax credits from this program over the employee&apos;s entire employment period with a company.</description>
        <inlineHelpText>The maximum amount an employee can be worth in tax credits from this program over the employee&apos;s entire employment period with a company.</inlineHelpText>
        <label>Maximum Lifetime Benefit</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MinimumDayCount__c</fullName>
        <description>Days of employment required before the employee qualifies for the tax credit. Blank implies the employee is immediately eligible.</description>
        <inlineHelpText>Days of employment required before the employee qualifies for the tax credit. Blank implies the employee is immediately eligible.</inlineHelpText>
        <label>Minimum Days Employed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinimumWeeklyHourCount__c</fullName>
        <description>The minimum number of hours in a week that an employee must work in order for the employer to claim the credit.</description>
        <inlineHelpText>The minimum number of hours in a week that an employee must work in order for the employer to claim the credit.</inlineHelpText>
        <label>Minimum Weekly Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfficialTextUrl__c</fullName>
        <description>A link to the official text that describes this program&apos;s rules and regulations.</description>
        <inlineHelpText>A link to the official text that describes this program&apos;s rules and regulations.</inlineHelpText>
        <label>URL of Official Legal Text</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OffsetTaxType__c</fullName>
        <description>The types of tax that this program&apos;s credit offsets.</description>
        <inlineHelpText>The types of tax that this program&apos;s credit offsets.</inlineHelpText>
        <label>Tax Type Offset by Credit</label>
        <picklist>
            <picklistValues>
                <fullName>Business License Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Income Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excise/Utilities Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Premium Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Tax</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProgramEID__c</fullName>
        <description>The Enterprise ID for this Program.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Program.</inlineHelpText>
        <label>Program EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgramEndSummary__c</fullName>
        <description>The overall end date of the program, calculated as the latest end date of the program&apos;s periods.</description>
        <inlineHelpText>The overall end date of the program, calculated as the latest end date of the program&apos;s periods.</inlineHelpText>
        <label>Program Expiration</label>
        <summarizedField>ProgramPeriod__c.EndDate__c</summarizedField>
        <summaryForeignKey>ProgramPeriod__c.Program__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProgramStartSummary__c</fullName>
        <description>The overall start date of the program, calculated as the earliest start date of the program&apos;s periods.</description>
        <inlineHelpText>The overall start date of the program, calculated as the earliest start date of the program&apos;s periods.</inlineHelpText>
        <label>Program Inception</label>
        <summarizedField>ProgramPeriod__c.StartDate__c</summarizedField>
        <summaryForeignKey>ProgramPeriod__c.Program__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProgramType__c</fullName>
        <description>The type of program, affecting the way the program is administered, how locations and employees qualify, and how the credit is calculated.</description>
        <inlineHelpText>The type of program, affecting the way the program is administered, how locations and employees qualify, and how the credit is calculated.</inlineHelpText>
        <label>Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Geographic Zone-Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headquarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geographic Tier-Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entity Preapproval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancestry/Ethnicity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Level</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RefundableBit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the taxpayer can get a tax refund without tax liability.</description>
        <inlineHelpText>Whether the taxpayer can get a tax refund without tax liability.</inlineHelpText>
        <label>Refundable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiredWageAboveBenchmarkAmount__c</fullName>
        <description>The required wage amount as a percentage above an official benchmark, such as federal or state minimum wage, or county average.</description>
        <inlineHelpText>The required wage amount as a percentage above an official benchmark, such as federal or state minimum wage, or county average.</inlineHelpText>
        <label>Required Wage above Benchmark (%)</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RetroactiveYearCount__c</fullName>
        <description>The number of years that a company can retroactively take credits.</description>
        <inlineHelpText>The number of years that a company can retroactively take credits.</inlineHelpText>
        <label>Retroactive Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <description>The program short name</description>
        <inlineHelpText>The program short name</inlineHelpText>
        <label>Short Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferableBit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this tax credit can be sold on the open market to another taxpaying employer.</description>
        <inlineHelpText>Whether this tax credit can be sold on the open market to another taxpaying employer.</inlineHelpText>
        <label>Transferable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypicalLifetimeBenefitAmount__c</fullName>
        <description>A typical amount an employee can be worth in tax credits from this program over the employee&apos;s entire employment period with a company.</description>
        <inlineHelpText>A typical amount an employee can be worth in tax credits from this program over the employee&apos;s entire employment period with a company.</inlineHelpText>
        <label>Typical Lifetime Benefit</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WageBenchmark__c</fullName>
        <description>The type of minimum or average wages used as a benchmark for this program.</description>
        <inlineHelpText>The type of minimum or average wages used as a benchmark for this program.</inlineHelpText>
        <label>Wage Benchmark</label>
        <picklist>
            <picklistValues>
                <fullName>County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WageCapAboveBenchmark__c</fullName>
        <description>The wages cap as a percentage above an official benchmark, such as federal or state minimum wage, or county average.</description>
        <inlineHelpText>The wages cap as a percentage above an official benchmark, such as federal or state minimum wage, or county average.</inlineHelpText>
        <label>Wage Cap above Benchmark (%)</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ProgramEID__c</columns>
        <columns>NAME</columns>
        <columns>DescriptionText__c</columns>
        <columns>ShortName__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>